--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "powerschool_soap_api",
+  "name": "powerschool-backend",
   "version": "1.0.0",
   "main": "build/app.js",
   "license": "GPL-3.0",
@@ -10,12 +10,15 @@
     "build": "tsc -b"
   },
   "dependencies": {
+    "@whsha/powerschool-api": "^1.2.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "powerschool-api": "^1.1.0"
+    "express-list-endpoints": "^4.0.1"
   },
   "devDependencies": {
     "@types/bluebird": "^3.5.29",
     "@types/express": "^4.17.2",
+    "@types/express-list-endpoints": "^4.0.1",
     "tslint": "^5.20.1",
     "typescript": "^3.7.4"
   }
